fix width on mobile

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -148,6 +148,8 @@ Links and information
 
     @media only screen and (min-width: 360px) and (max-width: 768px) {
         align-items: center;
+
+        width: auto;
         margin: 0;
     }
 }
